--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
     "express": "~4.15.5",
+    "is-empty": "^1.2.0",
     "morgan": "~1.9.0",
     "promise": "^8.0.1",
+    "qrcode-js": "0.0.2",
     "request": "^2.83.0",
     "request-promise": "^4.2.2",
     "serve-favicon": "~2.4.5",
