--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "request": "^2.83.0",
     "request-promise": "^4.2.2",
     "serve-favicon": "~2.4.5",
-    "sha256": "^0.2.0"
+    "sha256": "^0.2.0",
+    "urlencode": "^1.1.0"
   }
 }
